--- a/Join/View/FindIdeas/ContactCell.xib
+++ b/Join/View/FindIdeas/ContactCell.xib
@@ -2,9 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -51,9 +51,10 @@
                                     <constraint firstAttribute="width" secondItem="SV4-Vk-044" secondAttribute="height" multiplier="1:1" id="3AE-Ek-uWe"/>
                                     <constraint firstAttribute="width" constant="32" id="u0T-kw-jBh"/>
                                 </constraints>
+                                <color key="tintColor" name="Yellow1"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal">
-                                    <imageReference key="image" image="paperplane" catalog="system" symbolScale="large"/>
+                                    <imageReference key="image" image="paperplane.fill" catalog="system" symbolScale="large"/>
                                 </state>
                                 <connections>
                                     <action selector="sendMessage:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="udO-PR-WV2"/>
@@ -81,7 +82,10 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="paperplane" catalog="system" width="128" height="118"/>
+        <image name="paperplane.fill" catalog="system" width="128" height="118"/>
+        <namedColor name="Yellow1">
+            <color red="1" green="0.71764705882352942" blue="0.011764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
