--- a/Join/View/FindIdeas/IdeaCell.xib
+++ b/Join/View/FindIdeas/IdeaCell.xib
@@ -19,23 +19,11 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="標題" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5U-t7-mMv">
-                        <rect key="frame" x="16" y="20" width="313" height="21.5"/>
+                        <rect key="frame" x="16" y="20" width="294.5" height="21.5"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                         <color key="textColor" name="Blue1"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9PQ-0q-vtM">
-                        <rect key="frame" x="370" y="16" width="28" height="34"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="28" id="Ukb-8y-f4I"/>
-                            <constraint firstAttribute="width" secondItem="9PQ-0q-vtM" secondAttribute="height" multiplier="9:11" id="oa4-8a-Pff"/>
-                        </constraints>
-                        <color key="tintColor" name="Yellow1"/>
-                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal">
-                            <imageReference key="image" image="bookmark" catalog="system" symbolScale="large"/>
-                        </state>
-                    </button>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="tib-H7-9w9">
                         <rect key="frame" x="16" y="75" width="382" height="64"/>
                         <subviews>
@@ -132,18 +120,6 @@
                             </imageView>
                         </subviews>
                     </stackView>
-                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FUD-oX-wSo">
-                        <rect key="frame" x="345" y="20" width="53" height="20"/>
-                        <color key="backgroundColor" name="Red"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="Ft3-hE-osS"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="c6n-F1-wLk"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                        <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
-                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                        <state key="normal" title="999+"/>
-                    </button>
                     <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="psY-SF-vHK">
                         <rect key="frame" x="16" y="49.5" width="57.5" height="10.5"/>
                         <subviews>
@@ -173,30 +149,61 @@
                             </imageView>
                         </subviews>
                     </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="應徵人數: 99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CjK-tR-074" customClass="PaddingableLabel" customModule="Join" customModuleProvider="target">
+                        <rect key="frame" x="326.5" y="20" width="71.5" height="14.5"/>
+                        <color key="backgroundColor" name="Red"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" name="White"/>
+                        <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="paddingLeft">
+                                <real key="value" value="6"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="paddingRight">
+                                <real key="value" value="6"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="paddingTop">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="paddingBottom">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9PQ-0q-vtM">
+                        <rect key="frame" x="370" y="20" width="28" height="34"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="28" id="Ukb-8y-f4I"/>
+                            <constraint firstAttribute="width" secondItem="9PQ-0q-vtM" secondAttribute="height" multiplier="9:11" id="oa4-8a-Pff"/>
+                        </constraints>
+                        <color key="tintColor" name="Yellow1"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal">
+                            <imageReference key="image" image="bookmark" catalog="system" symbolScale="large"/>
+                        </state>
+                    </button>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="psY-SF-vHK" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="f5U-t7-mMv" secondAttribute="trailing" id="1mu-Ez-WC3"/>
+                <constraint firstItem="9PQ-0q-vtM" firstAttribute="top" secondItem="f5U-t7-mMv" secondAttribute="top" id="BHD-Ch-VP0"/>
                 <constraint firstAttribute="bottom" secondItem="tib-H7-9w9" secondAttribute="bottom" constant="20" id="CVy-DW-9Nl"/>
-                <constraint firstItem="FUD-oX-wSo" firstAttribute="firstBaseline" secondItem="f5U-t7-mMv" secondAttribute="firstBaseline" id="OpU-H0-wRw"/>
-                <constraint firstAttribute="trailing" secondItem="FUD-oX-wSo" secondAttribute="trailing" constant="16" id="Rg5-50-fHW"/>
                 <constraint firstAttribute="trailing" secondItem="tib-H7-9w9" secondAttribute="trailing" constant="16" id="TZq-f0-HXg"/>
-                <constraint firstItem="FUD-oX-wSo" firstAttribute="leading" secondItem="f5U-t7-mMv" secondAttribute="trailing" constant="16" id="fFV-bH-YI6"/>
-                <constraint firstItem="FUD-oX-wSo" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="hRR-0N-gK1"/>
                 <constraint firstItem="psY-SF-vHK" firstAttribute="top" secondItem="f5U-t7-mMv" secondAttribute="bottom" constant="8" id="lbp-9u-dqX"/>
+                <constraint firstItem="CjK-tR-074" firstAttribute="top" secondItem="f5U-t7-mMv" secondAttribute="top" id="m4I-hO-v4o"/>
                 <constraint firstItem="f5U-t7-mMv" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="mSy-0s-qQG"/>
+                <constraint firstAttribute="trailing" secondItem="CjK-tR-074" secondAttribute="trailing" constant="16" id="qx6-Rl-dmh"/>
+                <constraint firstItem="CjK-tR-074" firstAttribute="leading" secondItem="f5U-t7-mMv" secondAttribute="trailing" constant="16" id="tPd-mu-So6"/>
                 <constraint firstItem="psY-SF-vHK" firstAttribute="bottom" secondItem="tib-H7-9w9" secondAttribute="top" constant="-15" id="tWP-St-23A"/>
-                <constraint firstItem="9PQ-0q-vtM" firstAttribute="firstBaseline" secondItem="f5U-t7-mMv" secondAttribute="firstBaseline" id="try-sE-HGl"/>
                 <constraint firstItem="tib-H7-9w9" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="tyZ-tb-XgW"/>
                 <constraint firstItem="psY-SF-vHK" firstAttribute="leading" secondItem="f5U-t7-mMv" secondAttribute="leading" id="uKw-Sk-ybD"/>
                 <constraint firstItem="f5U-t7-mMv" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="wJY-oO-16K"/>
-                <constraint firstItem="9PQ-0q-vtM" firstAttribute="trailing" secondItem="f5U-t7-mMv" secondAttribute="trailing" constant="69" id="zPX-AR-rVC"/>
-                <constraint firstAttribute="trailing" secondItem="9PQ-0q-vtM" secondAttribute="trailing" constant="16" id="zlZ-CM-2Ft"/>
+                <constraint firstItem="9PQ-0q-vtM" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="trailing" constant="-16" id="zPX-AR-rVC"/>
             </constraints>
             <size key="customSize" width="414" height="160"/>
             <connections>
-                <outlet property="applicantsAmountLabelButton" destination="FUD-oX-wSo" id="NFC-BN-pGF"/>
+                <outlet property="applicantsAmountLabel" destination="CjK-tR-074" id="u68-AW-bk8"/>
                 <outlet property="deadlineLabel" destination="5uK-Vi-F0t" id="IEC-Iw-Scp"/>
                 <outlet property="imageView" destination="8oS-aI-VM5" id="Gu7-3m-jaQ"/>
                 <outlet property="locationLabel" destination="w9Q-Yo-ALf" id="cQp-YD-OTa"/>
@@ -231,6 +238,9 @@
         </namedColor>
         <namedColor name="Red">
             <color red="0.81999999284744263" green="0.28600001335144043" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="White">
+            <color red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Yellow1">
             <color red="1" green="0.71764705882352942" blue="0.011764705882352941" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
