--- a/Join/View/Chat.storyboard
+++ b/Join/View/Chat.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="o5g-e8-NES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -49,7 +48,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="DAu-Py-tgo">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus.message" catalog="system" id="0ds-7h-Qdn">
+                        <barButtonItem key="rightBarButtonItem" title="建立群組" id="0ds-7h-Qdn">
                             <color key="tintColor" name="AccentColor"/>
                             <connections>
                                 <action selector="addGroupChatroom:" destination="xzF-Dt-Vic" id="dNV-5a-Ibc"/>
@@ -268,7 +267,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="plus.message" catalog="system" width="128" height="113"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
