--- a/Join/View/Personal.storyboard
+++ b/Join/View/Personal.storyboard
@@ -355,7 +355,82 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j0k-kp-8ok" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6122" y="909"/>
+            <point key="canvasLocation" x="5335" y="232"/>
+        </scene>
+        <!--Portfolio Detail View Controller-->
+        <scene sceneID="oMW-eW-iwu">
+            <objects>
+                <viewController storyboardIdentifier="PortfolioDetailViewController" id="xYC-C4-j6q" customClass="PortfolioDetailViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3W0-mZ-ZH7">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8bS-Vg-HdP">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MyMasterpieceTableViewCell" rowHeight="157" id="4uL-gS-H4L" customClass="MyMasterpieceTableViewCell" customModule="Join" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="157"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4uL-gS-H4L" id="EV1-P8-aip">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="157"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eGv-Mn-7dj">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="157"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="eGv-Mn-7dj" firstAttribute="top" secondItem="EV1-P8-aip" secondAttribute="top" id="GN8-vs-7xp"/>
+                                                <constraint firstAttribute="bottom" secondItem="eGv-Mn-7dj" secondAttribute="bottom" id="MyT-ba-39u"/>
+                                                <constraint firstAttribute="trailing" secondItem="eGv-Mn-7dj" secondAttribute="trailing" id="tEz-t2-fot"/>
+                                                <constraint firstItem="eGv-Mn-7dj" firstAttribute="leading" secondItem="EV1-P8-aip" secondAttribute="leading" id="xTa-s2-gay"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="myMasterpieceImageView" destination="eGv-Mn-7dj" id="Ees-wd-b2z"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ai0-HD-jfg">
+                                <rect key="frame" x="26" y="812" width="24" height="24"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Icons_24px_More"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4st-Mk-Pqo">
+                                <rect key="frame" x="356" y="26" width="32" height="32"/>
+                                <inset key="contentEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Icons_24px_Close"/>
+                                <connections>
+                                    <action selector="close:" destination="xYC-C4-j6q" eventType="touchUpInside" id="UnB-D6-his"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="cRX-SG-9nE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ai0-HD-jfg" firstAttribute="bottom" secondItem="cRX-SG-9nE" secondAttribute="bottom" constant="-26" id="8Uc-xL-IO6"/>
+                            <constraint firstItem="4st-Mk-Pqo" firstAttribute="top" secondItem="3W0-mZ-ZH7" secondAttribute="top" constant="26" id="A95-pA-2Ac"/>
+                            <constraint firstItem="cRX-SG-9nE" firstAttribute="trailing" secondItem="4st-Mk-Pqo" secondAttribute="trailing" constant="26" id="GYb-iU-orA"/>
+                            <constraint firstAttribute="bottom" secondItem="8bS-Vg-HdP" secondAttribute="bottom" id="OZL-Po-j80"/>
+                            <constraint firstItem="8bS-Vg-HdP" firstAttribute="leading" secondItem="cRX-SG-9nE" secondAttribute="leading" id="X2J-qm-EaX"/>
+                            <constraint firstItem="cRX-SG-9nE" firstAttribute="trailing" secondItem="8bS-Vg-HdP" secondAttribute="trailing" id="e1d-1n-wEI"/>
+                            <constraint firstItem="Ai0-HD-jfg" firstAttribute="leading" secondItem="3W0-mZ-ZH7" secondAttribute="leading" constant="26" id="e2W-ya-4AH"/>
+                            <constraint firstItem="8bS-Vg-HdP" firstAttribute="top" secondItem="3W0-mZ-ZH7" secondAttribute="top" id="pZh-2f-iam"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="closeButton" destination="4st-Mk-Pqo" id="RFy-Ah-BKU"/>
+                        <outlet property="moreActionButton" destination="Ai0-HD-jfg" id="Tm0-Vc-t2k"/>
+                        <outlet property="tableView" destination="8bS-Vg-HdP" id="4QS-mG-PV2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="efO-QJ-TZu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6095.652173913044" y="231.69642857142856"/>
         </scene>
         <!--Item-->
         <scene sceneID="BFG-DT-NJj">
@@ -378,6 +453,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Icons_24px_Close" width="24" height="24"/>
+        <image name="Icons_24px_More" width="24" height="24"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
